# studium

./: .dir-locals.el  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/Modules/: ChickenUse.cmake  FindChicken.cmake
doc/: config
include/studium/: components.hpp  engine.hpp  entity.hpp  input.hpp  render.hpp  scripting.hpp  types.hpp
src/: components.cpp  engine.cpp  entity.cpp  input.cpp  render.cpp  scripting.cpp
test/src/: main.cpp
